@@ -12,7 +12,6 @@ set -e
 #POSTGIS_MINOR_VERSION=1
 #POSTGIS_MICRO_VERSION=0SVN
 #export GCC_TYPE=gcc48  #for pre-4.8.0 compiles this is blank
-export SFCGAL_VER=1.3.6
 export GEOS_VER=3.8.0dev
 export GDAL_VER=2.2.4
 export PROJ_VER=4.9.3
@@ -21,8 +20,6 @@ export PCRE_VER=8.33
 export PROTOBUF_VER=3.2.0
 export PROTOBUFC_VER=1.2.1
 export CGAL_VER=4.11
-
-
 export LIBXML_VER=2.7.8
 
 if [[ "${GCC_TYPE}" == *gcc48* ]] ; then
