@@ -1,6 +1,5 @@
 #!/bin/bash
 set -e
-export SFCGAL_VER=1.3.6
 export GEOS_VER=3.8.0dev
 export GDAL_VER=2.2.4
 export PROJ_VER=4.9.3
